[LayoutNG] Fix hit test offset accumulation in line boxes

Current NG hit test code doesn't accumulate offset when entering
line boxes, causing wrong result when hit testing multi-line
content. This patch fixes that.

However, hit test code on legacy layout accumulates offset in a
different way, which doesn't consider line boxes at all. Hence,
this patch introduces another parameter
|accumulated_offset_for_legacy|, which is accumulated in a
legacy-like manner, to be passed to legacy code when falling back
to legacy layout.

Bug: 810177
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_layout_ng;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I2292612c909536febc489c879340f98ecb12261a
Reviewed-on: https://chromium-review.googlesource.com/907495
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535574}
Former-commit-id: 137c9a644fc5355526dde26a4ac19a5bc710e1cf