third_party/WebKit/Source/core/layout/ng/layout_ng_mixin.cc
@@ -201,6 +201,7 @@ bool LayoutNGMixin<Base>::NodeAtPoint(
   }
 
   return NGBlockFlowPainter(*this).NodeAtPoint(result, location_in_container,
+                                               accumulated_offset,
                                                accumulated_offset, action);
 }
 
