third_party/WebKit/Source/core/paint/ng/ng_block_flow_painter.cc
@@ -29,10 +29,12 @@ bool NGBlockFlowPainter::NodeAtPoint(
     HitTestResult& result,
     const HitTestLocation& location_in_container,
     const LayoutPoint& accumulated_offset,
+    const LayoutPoint& accumulated_offset_for_legacy,
     HitTestAction action) {
   if (const NGPaintFragment* paint_fragment = block_.PaintFragment()) {
     return NGBoxFragmentPainter(*paint_fragment)
-        .NodeAtPoint(result, location_in_container, accumulated_offset, action);
+        .NodeAtPoint(result, location_in_container, accumulated_offset,
+                     accumulated_offset_for_legacy, action);
   }
   return false;
 }
