third_party/WebKit/Source/core/paint/ng/ng_block_flow_painter.h
@@ -32,6 +32,7 @@ class NGBlockFlowPainter {
   bool NodeAtPoint(HitTestResult&,
                    const HitTestLocation& location_in_container,
                    const LayoutPoint& accumulated_offset,
+                   const LayoutPoint& accumulated_offset_for_legacy,
                    HitTestAction);
 
  private:
