third_party/WebKit/Source/core/paint/ng/ng_box_fragment_painter.h
@@ -40,6 +40,7 @@ class NGBoxFragmentPainter : public BoxPainterBase {
   bool NodeAtPoint(HitTestResult&,
                    const HitTestLocation& location_in_container,
                    const LayoutPoint& accumulated_offset,
+                   const LayoutPoint& accumulated_offset_for_legacy,
                    HitTestAction);
 
  protected:
@@ -113,6 +114,7 @@ class NGBoxFragmentPainter : public BoxPainterBase {
                        const Vector<std::unique_ptr<NGPaintFragment>>&,
                        const HitTestLocation& location_in_container,
                        const LayoutPoint& accumulated_offset,
+                       const LayoutPoint& accumulated_offset_for_legacy,
                        HitTestAction);
   bool HitTestTextFragment(HitTestResult&,
                            const NGPhysicalFragment&,
